[tool.poetry]
name = "cortisol"
version = "0.1.0"
description = "Accurately forecast log costs pre-production with Cortisol for Datadog, New Relic, and Grafana 💰📉"
authors = ["pm3310 <pavlos@cortisol.ai>, dvarelas <dionysis@cortisol.ai>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.scripts]
cortisol = "cortisol.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
pyyaml = "^6.0.1"
docker = "^6.1.3"
jinja2 = "^3.1.2"
prettytable = "^3.8.0"
locust = "^2.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "cortisol/main.py"
]
